tests/ui/issues/issue-29861.stderr
error[E0207]: the lifetime parameter `'a` is not constrained by the impl trait, self type, or predicates
  --> $DIR/issue-29861.rs:11:6
   |
LL | impl<'a, T: 'a> MakeRef2 for T {
   |      ^^ unconstrained lifetime parameter
   |
help: this use of an otherwise unconstrained lifetime is not allowed
  --> $DIR/issue-29861.rs:13:17
   |
LL |     type Ref2 = <T as MakeRef<'a>>::Ref;
   |                 ^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0207`.
